@@ -1,2 +1,1 @@
-<!ENTITY url-brltty-driver-codes "http://www.mielke.cc/brltty/doc/Manual-BRLTTY/French/BRLTTY-11.html">
-<!ENTITY url-brltty-table-codes "http://www.mielke.cc/brltty/doc/Manual-BRLTTY/French/BRLTTY-6.html">
+<!ENTITY url-brltty-manual "http://www.mielke.cc/brltty/doc/Manual-BRLTTY/French/BRLTTY.html">
