@@ -207,9 +207,8 @@
 <!ENTITY url-simtel "ftp://ftp.simtel.net/pub/simtelnet/msdos/">
 
 <!ENTITY url-brltty "http://www.mielke.cc/brltty/">
-<!ENTITY url-brltty-driver-codes "http://www.mielke.cc/brltty/doc/Manual-BRLTTY/English/BRLTTY-11.html">
+<!ENTITY url-brltty-manual "http://www.mielke.cc/brltty/doc/Manual-BRLTTY/English/BRLTTY.html">
 <!ENTITY url-brltty-driver-help "http://www.mielke.cc/brltty/doc/drivers/">
-<!ENTITY url-brltty-table-codes "http://www.mielke.cc/brltty/doc/Manual-BRLTTY/English/BRLTTY-6.html">
 
 <!ENTITY url-speakup "http://www.linux-speakup.org/">
 <!ENTITY url-speakup-driver-codes "http://www.linux-speakup.org/spkguide.txt">
