@@ -49,11 +49,11 @@ d'afegir el paràmetre d'arrencada
 per a indicar al terminal <classname>brltty</classname> quin controlador
 emprar. Cal que reemplaceu <replaceable>controlador</replaceable> pel
 codi de dos lletres corresponent al controlador del vostre terminal (vegeu la
-<ulink url="&url-brltty-driver-codes;">llista de codis de controlador</ulink>).
+<ulink url="&url-brltty-manual;">llista de codis de controlador</ulink>).
 Cal que reemplaceu <replaceable>port</replaceable> pel nom del port sèrie
 on es troba connectada la pantalla; <userinput>ttyS0</userinput> és el
 valor per defecte. <replaceable>taula</replaceable> és el nom de la taula
-braille a emprar (vegeu la <ulink url="&url-brltty-table-codes;">llista
+braille a emprar (vegeu la <ulink url="&url-brltty-manual;">llista
 de codis de taula</ulink>); la taula anglesa és el valor per defecte.
 Adoneu-vos que podeu canviar la taula més endavant entrant al menú de
 preferències. La documentació sobre les assignacions de tecles per
