@@ -50,12 +50,12 @@ zaváděcí parametr
 <userinput>brltty=<replaceable>ovladač</replaceable>,<replaceable>port</replaceable>,<replaceable>tabulka</replaceable></userinput>,
 kterým <classname>brltty</classname> řeknete, který ovladač má použít.
 <replaceable>ovladač</replaceable> je dvoupísmenný kód ovladače
-připojeného řádku (viz <ulink url="&url-brltty-driver-codes;">seznam
+připojeného řádku (viz <ulink url="&url-brltty-manual;">seznam
 kódů ovladačů</ulink>). <replaceable>port</replaceable> je název
 sériového portu, ke kterému je řádek připojen; výchozí hodnotou je
 <userinput>ttyS0</userinput>. <replaceable>tabulka</replaceable>
 určuje braillovu tabulku pro daný jazyk
-(viz <ulink url="&url-brltty-table-codes;">seznam kódů jazykových
+(viz <ulink url="&url-brltty-manual;">seznam kódů jazykových
 tabulek</ulink>); výchozí je anglická tabulka. Tabulku můžete změnit i
 později v nastaveních <classname>brltty</classname>. Dokumentaci
 ohledně rozložení kláves
