@@ -49,13 +49,13 @@ angeben, um <classname>brltty</classname> mitzuteilen, welcher Treiber
 benutzt werden soll. Sie sollten <replaceable>driver</replaceable> durch
 den zweistelligen Buchstabencode des Treibers ersetzen, den Sie für Ihre
 Braillezeile benötigen (siehe eine
-<ulink url="&url-brltty-driver-codes;">Auflistung der Treiber-Codes</ulink>).
+<ulink url="&url-brltty-manual;">Auflistung der Treiber-Codes</ulink>).
 <replaceable>port</replaceable> sollten Sie durch den Namen des seriellen
 Anschlusses ersetzen, an den die Braillezeile angeschlossen ist;
 <userinput>ttyS0</userinput> ist der Standardwert.
 <replaceable>table</replaceable> ist der Name der Braille-Tabelle, die
 verwendet werden soll (siehe eine
-<ulink url="&url-brltty-table-codes;">Auflistung der Tabellen-Codes</ulink>);
+<ulink url="&url-brltty-manual;">Auflistung der Tabellen-Codes</ulink>);
 die englische Tabelle ist der Standard. Beachten Sie, dass Sie die
 verwendete Tabelle später im Einstellungsmenü noch ändern können.
 Dokumentation über Tastenkürzel für Braillezeilengeräte ist auf der <ulink
