@@ -48,11 +48,11 @@ paramètre d'amorçage
 <userinput>brltty=<replaceable>driver</replaceable>,<replaceable>port</replaceable>,<replaceable>table</replaceable></userinput>
 pour indiquer à <classname>brltty</classname> le pilote à utiliser.
 <replaceable>driver</replaceable> doit être remplacé par le code à deux lettres de votre terminal.
-Consultez <ulink url="&url-brltty-driver-codes;">la liste des codes de pilotes</ulink>.
+Consultez <ulink url="&url-brltty-manual;">la liste des codes de pilotes</ulink>.
 <replaceable>port</replaceable> doit être remplacé par le nom du port série
 auquel est connecté le périphérique. <userinput>ttyS0</userinput> est le port par défaut.
 <replaceable>table</replaceable> est le nom de la table Braille à utiliser.
-Consultez la <ulink url="&url-brltty-table-codes;">liste des codes de table</ulink>.
+Consultez la <ulink url="&url-brltty-manual;">liste des codes de table</ulink>.
 La table anglaise est choisie par défaut. Mais vous pouvez la changer en entrant dans le menu des préférences.
 Sur le site web de <ulink url="&url-brltty-driver-help;"><classname>brltty</classname></ulink>
 on peut trouver une documentation sur l'affectation des touches.
