@@ -78,11 +78,11 @@ Serial braille displays cannot safely be automatically detected
 boot parameter to tell <classname>brltty</classname> which driver it
 should use. <replaceable>driver</replaceable> should be replaced by the
 two-letter driver code for your terminal (see the
-<ulink url="&url-brltty-driver-codes;">driver code list</ulink>).
+<ulink url="&url-brltty-manual;">driver code list</ulink>).
 <replaceable>port</replaceable> should be replaced by the name of the
 serial port the display is connected to, <userinput>ttyS0</userinput> is
 the default. <replaceable>table</replaceable> is the name of the braille
-table to be used (see the <ulink url="&url-brltty-table-codes;">table code
+table to be used (see the <ulink url="&url-brltty-manual;">table code
 list</ulink>); the English table is the default. Note that the table can
 be changed later by entering the preference menu. Documentation on key
 bindings for braille devices is available on the <ulink
@@ -96,12 +96,12 @@ aggiungere il parametro d'avvio
 per indicare a <classname>brltty</classname> quale driver utilizzare.
 <replaceable>driver</replaceable> deve essere sostituito con il codice
 a due lettere del driver adatto al proprio terminale (si veda l'<ulink
-url="&url-brltty-driver-codes;">elenco dei codici dei driver</ulink>).
+url="&url-brltty-manual;">elenco dei codici dei driver</ulink>).
 <replaceable>porta</replaceable> deve essere sostituito dal nome della
 porta alla quale è collegato il display, il valore predefinito è
 <userinput>ttyS0</userinput>. <replaceable>tavola</replaceable> è il
 nome della tavola braille da usare (si veda l'<ulink
-url="&url-brltty-table-codes;">elenco dei codici delle tavole</ulink>),
+url="&url-brltty-manual;">elenco dei codici delle tavole</ulink>),
 la tavola predefinita è quella inglese. Notare che la tavola può essere
 cambiata in seguito tramite il menu preferenze. La documentazione sulle
 associazioni dei tasti per i dispositivi braille può essere trovata sul
