@@ -45,11 +45,11 @@ Serial braille displays cannot safely be automatically detected
 boot parameter to tell <classname>brltty</classname> which driver it
 should use. <replaceable>driver</replaceable> should be replaced by the
 two-letter driver code for your terminal (see the
-<ulink url="&url-brltty-driver-codes;">driver code list</ulink>).
+<ulink url="&url-brltty-manual;">driver code list</ulink>).
 <replaceable>port</replaceable> should be replaced by the name of the
 serial port the display is connected to, <userinput>ttyS0</userinput> is
 the default. <replaceable>table</replaceable> is the name of the braille
-table to be used (see the <ulink url="&url-brltty-table-codes;">table code
+table to be used (see the <ulink url="&url-brltty-manual;">table code
 list</ulink>); the English table is the default. Note that the table can
 be changed later by entering the preference menu. Documentation on key
 bindings for braille devices is available on the <ulink
