@@ -6,6 +6,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Document booting d-i from grub2. Closes: #612165.
   * Mention preseeding as an alternative for accessibility.
   * Document that the text installer is selected by default.
+  * Avoid referencing BRLTTY manual chapter precise numbers. Closes: #580508.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
